--- a/src/AccountGoWeb/Views/Financials/IncomeStatement.cshtml
+++ b/src/AccountGoWeb/Views/Financials/IncomeStatement.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<Models.IncomeStatement>
+﻿@model ICollection<AccountGoWeb.Models.IncomeStatement>
 @{
     ViewBag.Title = "IncomeStatement";
     Layout = "~/Views/Shared/_Layout.cshtml";
