--- a/src/AccountGoWeb/Views/Financials/TrialBalance.cshtml
+++ b/src/AccountGoWeb/Views/Financials/TrialBalance.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<Models.TrialBalance>
+﻿@model ICollection<AccountGoWeb.Models.TrialBalance>
 @{
     ViewBag.Title = "TrialBalance";
     Layout = "~/Views/Shared/_Layout.cshtml";
