--- a/src/AccountGoWeb/Views/Purchasing/PurchaseInvoices.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/PurchaseInvoices.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <a href="~/purchasing/addpurchaseinvoice"><i class="fa fa-plus margin-a"></i>New Invoice</a>
-    <a href="~/purchasing/payment"><i class="fa fa-tasks margin-a"></i>Make Payment</a>
+    <a href="~/purchasing/payment" id="linkMakePayment" class="inactiveLink"><i class="fa fa-tasks margin-a"></i>Make Payment</a>
 </div>
 <div>
     <div id="purchaseinvoices" class="ag-fresh" style="height: 400px;"></div>
@@ -11,17 +11,29 @@
     var columnDefs = [
         {headerName: "Invoice", field: "id", width: 50},
         {headerName: "Vendor Name", field: "vendorName", width: 350},
-        {headerName: "Invoiced Date", field: "invoiceDate", width: 100},
-        {headerName: "Amount", field: "Amount", width: 100}
+        {headerName: "Invoice Date", field: "invoiceDate", width: 100},
+        {headerName: "Amount", field: "amount", width: 100}
     ];
 
     var gridOptions = {
         columnDefs: columnDefs,
         rowData: @Html.Raw(Model),
-
         // PROPERTIES - simple boolean / string / number properties
-        rowSelection: 'multiple',
-     };
+        rowSelection: 'single',
+        onSelectionChanged: onSelectionChanged,
+    };
+
+    function onSelectionChanged() {
+        var selectedRows = gridOptions.api.getSelectedRows();
+        selectedRow = selectedRows[0];
+        
+        document.getElementById('linkMakePayment').setAttribute('href', 'payment/' + selectedRow.id);
+        
+        if(!selectedRow.isPaid)
+            document.getElementById('linkMakePayment').setAttribute('class', '');
+        else
+            document.getElementById('linkMakePayment').setAttribute('class', 'inactiveLink');
+    }
 
     // wait for the document to be loaded, otherwise
     // ag-Grid will not find the div in the document.
