--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -367,11 +367,11 @@ desired effect
                         <ul class="treeview-menu">
                             <li>
                                 <!--<a href="#">Company</a>-->
-                                <a href="#">Company</a>
+                                <a href="~/administration/company">Company</a>
                             </li>
                             <li>
                                 <!--<a href="#">Setup</a>-->
-                                <a href="#">Setup</a>
+                                <a href="~/administration/settings">Settings</a>
                             </li>
                         </ul>
                     </li>
