--- a/src/AccountGoWeb/Views/Financials/BalanceSheet.cshtml
+++ b/src/AccountGoWeb/Views/Financials/BalanceSheet.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<Models.BalanceSheet>
+﻿@model ICollection<AccountGoWeb.Models.BalanceSheet>
 @{
     ViewBag.Title = "BalanceSheet";
     Layout = "~/Views/Shared/_Layout.cshtml";
