--- a/src/AccountGoWeb/Views/Sales/Customers.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a href="~/sales/addcustomer"><i class="fa fa-plus margin-a"></i>New Customer</a>
+    <a href="~/sales/customer"><i class="fa fa-plus margin-a"></i>New Customer</a>
 </div>
 <div>
     <div id="customers" class="ag-fresh" style="height: 400px;"></div>
@@ -18,9 +18,8 @@
     var gridOptions = {
         columnDefs: columnDefs,
         rowData: @Html.Raw(Model),
-
         // PROPERTIES - simple boolean / string / number properties
-        rowSelection: 'multiple',
+        rowSelection: 'single',
      };
 
     // wait for the document to be loaded, otherwise
