--- a/src/AccountGoWeb/Views/Inventory/Items.cshtml
+++ b/src/AccountGoWeb/Views/Inventory/Items.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a href="~/inventory/additem"><i class="fa fa-plus margin-a"></i>New Item</a>
+    <a href="~/inventory/item"><i class="fa fa-plus margin-a"></i>New Item</a>
 </div>
 <div>
     <div id="items" class="ag-fresh" style="height: 400px;"></div>
