--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -1,48 +1,185 @@
-﻿@model string
-<!-- Default box -->
-<div class="box">
-    <div class="box-header with-border">
-        <h3 class="box-title">General</h3>
-        <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                <i class="fa fa-minus"></i>
-            </button>
+﻿@model Dto.Purchasing.Vendor
+
+<div class="col-md-9">
+    <form action="~/purchasing/savevendor" method="post">
+        @Html.HiddenFor(m => m.Id)
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">General</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-2">No</div>
+                        <div class="col-sm-10">@Model.No</div>
+                        @Html.HiddenFor(m => m.No)
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2">Name</div>
+                        <div class="col-sm-10">
+                            <input asp-for="Name" class="form-control" type="text" placeholder="Name ..." />
+                            <span asp-validation-for="Name" class="danger"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-2">Phone</div>
+                        <div class="col-sm-10">
+                            <input asp-for="Phone" class="form-control" type="text" placeholder="Phone ..." />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2">Fax</div>
+                        <div class="col-sm-10">
+                            <input asp-for="Fax" class="form-control" type="text" placeholder="Fax ..." />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2">Website</div>
+                        <div class="col-sm-10">
+                            <input asp-for="Website" class="form-control" type="text" placeholder="Website ..." />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2">Email</div>
+                        <div class="col-sm-10">
+                            <input asp-for="Email" class="form-control" type="text" placeholder="Email ..." />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="box-body">
-        Start creating your amazing application!
-    </div>
-    <!-- /.box-body -->
-</div>
-<!-- /.box -->
-<!-- Default box -->
-<div class="box">
-    <div class="box-header with-border">
-        <h3 class="box-title">Invoicing</h3>
-        <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                <i class="fa fa-minus"></i>
-            </button>
+
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Contact</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-4">First Name</div>
+                        <div class="col-sm-8">
+                            <input asp-for="PrimaryContact.FirstName" class="form-control" type="text" placeholder="Phone ..." />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">Last Name</div>
+                        <div class="col-sm-8">
+                            <input asp-for="PrimaryContact.LastName" class="form-control" type="text" placeholder="Fax ..." />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-4">Phone</div>
+                        <div class="col-sm-8">
+                            <input asp-for="PrimaryContact.Party.Phone" class="form-control" type="text" placeholder="Phone ..." />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">Fax</div>
+                        <div class="col-sm-8">
+                            <input asp-for="PrimaryContact.Party.Fax" class="form-control" type="text" placeholder="Fax ..." />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">Website</div>
+                        <div class="col-sm-8">
+                            <input asp-for="PrimaryContact.Party.Website" class="form-control" type="text" placeholder="Website ..." />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">Email</div>
+                        <div class="col-sm-8">
+                            <input asp-for="PrimaryContact.Party.Email" class="form-control" type="text" placeholder="Email ..." />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="box-body">
-        Start creating your amazing application!
-    </div>
-    <!-- /.box-body -->
-</div>
-<!-- /.box -->
-<div class="box">
-    <div class="box-header with-border">
-        <h3 class="box-title">Payment</h3>
-        <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                <i class="fa fa-minus"></i>
-            </button>
+
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Invoicing</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-6">Accounts Payable</div>
+                        <div class="col-sm-6">
+                            <select class="form-control" asp-for="AccountsPayableAccountId" asp-items="@ViewBag.Accounts"></select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">Purchase</div>
+                        <div class="col-sm-6">
+                            <select class="form-control" asp-for="PurchaseAccountId" asp-items="@ViewBag.Accounts"></select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">Discount</div>
+                        <div class="col-sm-6">
+                            <select class="form-control" asp-for="PurchaseDiscountAccountId" asp-items="@ViewBag.Accounts"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-4">Tax Group</div>
+                        <div class="col-sm-8">
+                            <select class="form-control" asp-for="TaxGroupId" asp-items="@ViewBag.TaxGroups"></select>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="box-body">
-        Start creating your amazing application!
-    </div>
-    <!-- /.box-body -->
+
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Payment</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-4">Payment Term</div>
+                        <div class="col-sm-8">
+                            <select class="form-control" asp-for="PaymentTermId" asp-items="@ViewBag.PaymentTerms"></select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <input class="btn btn-primary btn-flat" type="submit" value="Save" />
+        </div>
+    </form>
 </div>
-<!-- /.box -->
+<div class="col-md-3">
+</div>
+
+@section scripts{
+    <script>
+
+    </script>
+}
