--- a/src/AccountGoWeb/Views/Purchasing/Payment.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Payment.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AccountGoWeb.Models.Purchasing.Payment
 
-<form action="purchasing/payment" method="post">
+<form action="~/purchasing/payment" method="post">
     <div class="col-md-9">
         <div class="box">
             <div class="box-header with-border">
@@ -15,35 +15,50 @@
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-4">Invoice No</div>
-                        <div class="col-sm-8">@Model.InvoiceNo</div>
+                        <div class="col-sm-8">@Html.DisplayFor(m => m.InvoiceNo)</div>
                         @Html.HiddenFor(m => m.InvoiceId)
+                        @Html.HiddenFor(m => m.InvoiceNo)
                     </div>
                     <div class="row">
                         <div class="col-sm-4">Vendor Name</div>
-                        <div class="col-sm-8">@Model.VendorName</div>
+                        <div class="col-sm-8">@Html.DisplayFor(m => m.VendorName)</div>
                         @Html.HiddenFor(m => m.VendorId)
+                        @Html.HiddenFor(m => m.VendorName)
                     </div>
                     <div class="row">
                         <div class="col-sm-4">Invoice Date</div>
-                        <div class="col-sm-8">@Model.Date</div>
+                        <div class="col-sm-8">
+                            @Html.DisplayFor(m => m.Date)
+                            @Html.HiddenFor(m => m.Date)
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-4">Invoice Amount</div>
-                        <div class="col-sm-8">@Model.InvoiceAmount</div>
+                        <div class="col-sm-8">
+                            @Html.DisplayFor(m => m.InvoiceAmount)
+                            @Html.HiddenFor(m => m.InvoiceAmount)
                     </div>
-                    <div class="row">
-                        <div class="col-sm-4">Amount to Pay</div>
-                        <div class="col-sm-8"><input asp-for="AmountToPay" class="form-control" type="text" placeholder="Amount ..." /></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">Amount to Pay</div>
+                    <div class="col-sm-8">
+                        <input asp-for="AmountToPay" class="form-control" type="text" placeholder="Amount ..." />
+                        <span asp-validation-for="AmountToPay" class="danger"></span>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-4">Account</div>
-                        <div class="col-sm-8"><select class="form-control" asp-for="AccountId" asp-items="@ViewBag.CashBanks"></select></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">Account</div>
+                    <div class="col-sm-8">
+                        <select class="form-control" asp-for="AccountId" asp-items="@ViewBag.CashBanks"></select>
+                        <span asp-validation-for="AccountId" class="danger"></span>
+                        @Html.HiddenFor(m => m.AccountId)
                     </div>
                 </div>
             </div>
         </div>
-        <div>
-            <input class="btn btn-primary btn-flat" type="submit" value="Save" />
-        </div>
     </div>
+    <div>
+        <input class="btn btn-primary btn-flat" type="submit" value="Save" />
+    </div>
+</div>
 </form>
