--- a/src/AccountGoWeb/Views/Sales/AddReceipt.cshtml
+++ b/src/AccountGoWeb/Views/Sales/AddReceipt.cshtml
@@ -1,6 +1,7 @@
 ﻿@model AccountGoWeb.Models.Sales.AddReceipt
 
 <div class="col-sm-6">
+    @Html.ValidationSummary(true)
     <form action="~/sales/addreceipt" method="post">
         <div class="box">
             <div class="box-body">
@@ -8,6 +9,7 @@
                     <div class="col-sm-2">Customer</div>
                     <div class="col-sm-10">
                         <select class="form-control" asp-for="CustomerId" asp-items="@ViewBag.Customers"></select>
+                        <span asp-validation-for="CustomerId" class="danger"></span>
                     </div>
                 </div>
                 <div class="row">
@@ -20,18 +22,21 @@
                     <div class="col-sm-2">Debit</div>
                     <div class="col-sm-10">
                         <select class="form-control" asp-for="DebitAccountId" asp-items="@ViewBag.DebitAccounts"></select>
+                        <span asp-validation-for="DebitAccountId" class="danger"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-2">Credit</div>
                     <div class="col-sm-10">
                         <select class="form-control" asp-for="CreditAccountId" asp-items="@ViewBag.CreditAccounts"></select>
+                        <span asp-validation-for="CreditAccountId" class="danger"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-2">Amount</div>
                     <div class="col-sm-10">
                         <input class="form-control" asp-for="Amount" type="text" placeholder="0.0 ..." />
+                        <span asp-validation-for="Amount" class="danger"></span>
                     </div>
                 </div>
             </div>
