--- a/src/AccountGoWeb/Views/Financials/AddJournalEntry.cshtml
+++ b/src/AccountGoWeb/Views/Financials/AddJournalEntry.cshtml
@@ -1,3 +1,3 @@
-﻿<div id="divAddJournalEntry"></div>
-<script type="text/javascript" src="~/scripts/financials/addjournalentry.chunk.js">
+﻿<div id="divJournalEntry"></div>
+<script type="text/javascript" src="~/scripts/financials/journalentry.chunk.js">
 </script>
