--- a/src/AccountGoWeb/Views/Purchasing/AddPurchaseOrder.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/AddPurchaseOrder.cshtml
@@ -1,2 +1,2 @@
-﻿<div id="divAddPurchaseOrder"></div>
-<script src="~/scripts/purchasing/addpurchaseorder.chunk.js" type="text/javascript"></script>
+﻿<div id="divPurchaseOrder"></div>
+<script src="~/scripts/purchasing/purchaseorder.chunk.js" type="text/javascript"></script>
