--- a/src/AccountGoWeb/Views/Quotations/AddSalesQuotation.cshtml
+++ b/src/AccountGoWeb/Views/Quotations/AddSalesQuotation.cshtml
@@ -1,3 +1,3 @@
-﻿<div id="divAddSalesQuotation"></div>
+﻿<div id="divSalesQuotation"></div>
 
-<script src="~/scripts/quotations/addsalesquotation.chunk.js" type="text/javascript"></script>
+<script src="~/scripts/quotations/salesquotation.chunk.js" type="text/javascript"></script>
