--- a/src/AccountGoWeb/Views/Sales/AddSalesInvoice.cshtml
+++ b/src/AccountGoWeb/Views/Sales/AddSalesInvoice.cshtml
@@ -1,3 +1,3 @@
-﻿<div id="divAddSalesInvoice"></div>
+﻿<div id="divSalesInvoice"></div>
 
-<script src="~/scripts/sales/addsalesinvoice.chunk.js" type="text/javascript"></script>
+<script src="~/scripts/sales/salesinvoice.chunk.js" type="text/javascript"></script>
