--- a/src/AccountGoWeb/Views/Sales/AddSalesOrder.cshtml
+++ b/src/AccountGoWeb/Views/Sales/AddSalesOrder.cshtml
@@ -1,3 +1,3 @@
-﻿<div id="divAddSalesOrder"></div>
+﻿<div id="divSalesOrder"></div>
 
-<script src="~/scripts/sales/addsalesorder.chunk.js" type="text/javascript"></script>
+<script src="~/scripts/sales/salesorder.chunk.js" type="text/javascript"></script>
