view details pages

--- a/src/AccountGoWeb/Views/Sales/SalesInvoices.cshtml
+++ b/src/AccountGoWeb/Views/Sales/SalesInvoices.cshtml
@@ -11,7 +11,7 @@
     var columnDefs = [
         {headerName: "Invoice", field: "id", width: 50},
         {headerName: "Customer Name", field: "customerName", width: 350},
-        {headerName: "Invoiced Date", field: "InvoiceDate", width: 100},
+        {headerName: "Invoiced Date", field: "invoiceDate", width: 100},
         {headerName: "Amount", field: "totalAmount", width: 100}
     ];
 
@@ -19,7 +19,7 @@
         columnDefs: columnDefs,
         rowData: @Html.Raw(Model),
         // PROPERTIES - simple boolean / string / number properties
-        rowSelection: 'multiple',
+        rowSelection: 'single',
         onSelectionChanged: onSelectionChanged,
     };
 
