--- a/src/AccountGoWeb/Views/Sales/salesorders.cshtml
+++ b/src/AccountGoWeb/Views/Sales/salesorders.cshtml
@@ -31,7 +31,7 @@
         document.getElementById('linkViewOrder').setAttribute('href', 'salesorder?orderId=' + selectedRow.id);
         document.getElementById('linkViewOrder').setAttribute('class', '');
 
-        document.getElementById('linkNewInvoice').setAttribute('href', 'salesinvoice?invoiceId=' + selectedRow.id);
+        document.getElementById('linkNewInvoice').setAttribute('href', 'salesinvoice?orderId=' + selectedRow.id);
         document.getElementById('linkNewInvoice').setAttribute('class', '');
     }
 
