--- a/src/AccountGoWeb/Views/Financials/JournalEntries.cshtml
+++ b/src/AccountGoWeb/Views/Financials/JournalEntries.cshtml
@@ -12,9 +12,9 @@
     {headerName: "Journal", field: "id", width: 50},
     {headerName: "Voucher Type", field: "voucherType", width: 50},
     {headerName: "Amount", field: "amount", width: 50},
-    {headerName: "Date", field: "date", width: 100},
+    {headerName: "Date", field: "journalDate", width: 100},
     {headerName: "Reference No", field: "referenceNo", width: 50},
-    {headerName: "Posted", field: "posted", width: 100},
+    {headerName: "Posted", field: "posted", width: 100, },
     {headerName: "Memo", field: "memo", width: 350}
     ];
 
