--- a/src/AccountGoWeb/Views/Sales/SalesReceipts.cshtml
+++ b/src/AccountGoWeb/Views/Sales/SalesReceipts.cshtml
@@ -23,7 +23,7 @@
     var gridOptions = {
         columnDefs: columnDefs,
         rowData: @Html.Raw(Model),
-
+        enableSorting: true,
         // PROPERTIES - simple boolean / string / number properties
         rowSelection: 'single',
         onSelectionChanged: onSelectionChanged,
