--- a/src/AccountGoWeb/Views/Sales/Allocate.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Allocate.cshtml
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div>
-            <input class="btn btn-primary btn-flat" type="submit" value="Save" />
+            <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
         </div>
     </form>
 
