--- a/src/AccountGoWeb/Views/Purchasing/Payment.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Payment.cshtml
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div>
-        <input class="btn btn-primary btn-flat" type="submit" value="Save" />
+        <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
     </div>
 </div>
 </form>
