--- a/src/AccountGoWeb/Views/Inventory/Items.cshtml
+++ b/src/AccountGoWeb/Views/Inventory/Items.cshtml
@@ -2,6 +2,7 @@
 
 <div>
     <a href="~/inventory/item"><i class="fa fa-plus margin-a"></i>New Item</a>
+    <a href="~/inventory/item" id="linkViewItem" class="inactiveLink"><i class="fa fa-edit margin-a"></i>View</a>
 </div>
 <div>
     <div id="items" class="ag-fresh" style="height: 400px;"></div>
@@ -21,9 +22,19 @@
     var gridOptions = {
         columnDefs: columnDefs,
         rowData: @Html.Raw(Model),
-        // PROPERTIES
-        rowSelection: 'multiple',
+        enableSorting: true,
+        // PROPERTIES - simple boolean / string / number properties
+        rowSelection: 'single',
+        onSelectionChanged: onSelectionChanged,
     };
+
+    function onSelectionChanged() {
+        var selectedRows = gridOptions.api.getSelectedRows();
+        selectedRow = selectedRows[0];
+        
+        document.getElementById('linkViewItem').setAttribute('href', 'item/' + selectedRow.id);
+        document.getElementById('linkViewItem').setAttribute('class', '');
+    }
 
     // wait for the document to be loaded, otherwise
     // ag-Grid will not find the div in the document.
